# ds-synonym-replacer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: tauri-publish.yml
src/: app.html  app.postcss  hooks.server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  textgrid.pest
src/lib/: theme-select.svelte
src/lib/themes/: index.js
src/routes/: +layout.svelte  +page.svelte
